[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.5.0"
bevy_rapier2d = { version = "0.11", features = ["simd-stable", "render"] }
bevy_svg = { git = "https://github.com/Weasy666/bevy_svg", branch = "bevy-0.5" }
noise = { git = "https://github.com/bsurmanski/noise-rs", branch = "feature/perlin1d" }
lyon = { git = "https://github.com/nical/lyon", rev = "094698b552"}
