[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = "0.6.0"
bevy_rapier2d = { version = "0.12.0", features = ["simd-stable", "render"] }
bevy_svg = { version = "0.6.0" }
noise = { git = "https://github.com/bsurmanski/noise-rs", branch = "feature/cyclic" }
lyon = { git = "https://github.com/nical/lyon", rev = "094698b552"}
